{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 323,
  "lineage": "3aeda1c2-b223-805c-afd0-fe53504cacb9",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_nfc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-private/d843e758b0cc269f",
            "arn_suffix": "app/clc-nfc-load-balancer-private/d843e758b0cc269f",
            "connection_logs": [
              {
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-clc-nfc-load-balancer-private-1589851921.cn-northwest-1.elb.amazonaws.com.cn",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-private/d843e758b0cc269f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clc-nfc-load-balancer-private",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aae091c9abd41773"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0758819fbf08d4a90"
              },
              {
                "subnet_id": "subnet-0a07021591da94479"
              }
            ],
            "subnets": [
              "subnet-0758819fbf08d4a90",
              "subnet-0a07021591da94479"
            ],
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50",
            "xff_header_processing_mode": "append",
            "zone_id": "ZM7IZAIOVVDZF"
          },
          "dependencies": [
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_nfc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-public/dbad8d62feb336d5",
            "arn_suffix": "app/clc-nfc-load-balancer-public/dbad8d62feb336d5",
            "connection_logs": [
              {
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "clc-nfc-load-balancer-public-1300136021.cn-northwest-1.elb.amazonaws.com.cn",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-public/dbad8d62feb336d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clc-nfc-load-balancer-public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aae091c9abd41773"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04294c16f4627eb98"
              },
              {
                "subnet_id": "subnet-0c8df50ec250304cf"
              }
            ],
            "subnets": [
              "subnet-04294c16f4627eb98",
              "subnet-0c8df50ec250304cf"
            ],
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50",
            "xff_header_processing_mode": "append",
            "zone_id": "ZM7IZAIOVVDZF"
          },
          "dependencies": [
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listen_nfc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-private/d843e758b0cc269f/388f76b976c42305",
            "certificate_arn": "arn:aws-cn:acm:cn-northwest-1:034861587527:certificate/b50707ff-9300-4538-94ce-9f2653310d0b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private/052858293c59f55c",
                "type": "forward"
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-private/d843e758b0cc269f/388f76b976c42305",
            "load_balancer_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-private/d843e758b0cc269f",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.alb_nfc_private",
            "module.alb.aws_alb_target_group.alb_target_nfc_private",
            "module.alb.data.aws_acm_certificate.gc_clc_nfc_stg_private",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listen_nfc_private_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-private/d843e758b0cc269f/bdc28c961cb04d76",
            "certificate_arn": "arn:aws-cn:acm:cn-northwest-1:034861587527:certificate/b50707ff-9300-4538-94ce-9f2653310d0b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private-backend/b0956062b5cce3b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-private/d843e758b0cc269f/bdc28c961cb04d76",
            "load_balancer_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-private/d843e758b0cc269f",
            "mutual_authentication": [],
            "port": 8082,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.alb_nfc_private",
            "module.alb.aws_alb_target_group.alb_target_nfc_private_backend",
            "module.alb.data.aws_acm_certificate.gc_clc_nfc_stg_private",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listen_nfc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-public/dbad8d62feb336d5/4b3dd8abdb4f222f",
            "certificate_arn": "arn:aws-cn:acm:cn-northwest-1:034861587527:certificate/5f02c84e-a006-4322-8314-09b1a7c4adda",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-public/ade3fc259fbbb929",
                "type": "forward"
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:listener/app/clc-nfc-load-balancer-public/dbad8d62feb336d5/4b3dd8abdb4f222f",
            "load_balancer_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:loadbalancer/app/clc-nfc-load-balancer-public/dbad8d62feb336d5",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.alb_nfc_public",
            "module.alb.aws_alb_target_group.alb_target_nfc_public",
            "module.alb.data.aws_acm_certificate.gc_clc_nfc_stg_public",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_rules",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_self",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_nfc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private/052858293c59f55c",
            "arn_suffix": "targetgroup/alb-target-nfc-private/052858293c59f55c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 100,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private/052858293c59f55c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-nfc-private",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_nfc_private_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private-backend/b0956062b5cce3b3",
            "arn_suffix": "targetgroup/alb-target-nfc-private-backend/b0956062b5cce3b3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 100,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-private-backend/b0956062b5cce3b3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-nfc-private-backend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_nfc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-public/b5e759c5e9357ab6",
            "arn_suffix": "targetgroup/alb-target-nfc-public/b5e759c5e9357ab6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 100,
                "matcher": "200",
                "path": "/nfc-service/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:034861587527:targetgroup/alb-target-nfc-public/b5e759c5e9357ab6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-nfc-public",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_22_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-001ac2f3b823a4506",
            "description": "Security group for ssh visit",
            "egress": [],
            "id": "sg-001ac2f3b823a4506",
            "ingress": [],
            "name": "https-22-tcp_nfc-20240130091838997300000001",
            "name_prefix": "https-22-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "https-22-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Name": "https-22-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_22_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1423007203",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-001ac2f3b823a4506",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_22_nfc.aws_security_group.this",
            "module.security-group.module.security_group_22_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_22_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2836934924",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-001ac2f3b823a4506",
            "security_group_rule_id": "sgr-04e8bd38506131473",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_22_nfc.aws_security_group.this",
            "module.security-group.module.security_group_22_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_3306_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-0390fff3c85925c2b",
            "description": "Security group for rds visit",
            "egress": [],
            "id": "sg-0390fff3c85925c2b",
            "ingress": [],
            "name": "https-3306-tcp_nfc-20240130091838997300000006",
            "name_prefix": "https-3306-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "https-3306-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Name": "https-3306-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_3306_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-546337743",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0390fff3c85925c2b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_3306_nfc.aws_security_group.this",
            "module.security-group.module.security_group_3306_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_3306_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Security group for rds visit",
            "from_port": 3306,
            "id": "sgrule-652125856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0390fff3c85925c2b",
            "security_group_rule_id": "sgr-062b4c1e7cca8fb99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_3306_nfc.aws_security_group.this",
            "module.security-group.module.security_group_3306_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_443_80_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-0aae091c9abd41773",
            "description": "Security group for HTTP \u0026 HTTPS visit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aae091c9abd41773",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https-443-80-tcp_nfc-20240130091838997300000005",
            "name_prefix": "https-443-80-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "https-443-80-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "https-443-80-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_443_80_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-494260354",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aae091c9abd41773",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_443_80_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-4246786355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aae091c9abd41773",
            "security_group_rule_id": "sgr-0a703f708672060b7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3183043646",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aae091c9abd41773",
            "security_group_rule_id": "sgr-00763082c7eeee6d2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this",
            "module.security-group.module.security_group_443_80_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_6379_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-02efb52558990bb0e",
            "description": "Security group for redis visit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02efb52558990bb0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "https-6379-tcp_nfc-20240130091838997300000002",
            "name_prefix": "https-6379-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "https-6379-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "Lst-gcscops@123.com",
              "Environment": "stg",
              "Name": "https-6379-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": " GOaL Tech",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_6379_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-38941532",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02efb52558990bb0e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_6379_nfc.aws_security_group.this",
            "module.security-group.module.security_group_6379_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_6379_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "Redis",
            "from_port": 6379,
            "id": "sgrule-984290317",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02efb52558990bb0e",
            "security_group_rule_id": "sgr-0a8762e11b51e30db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_6379_nfc.aws_security_group.this",
            "module.security-group.module.security_group_6379_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8080_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-08bbedd2dfe381c99",
            "description": "Security group for application visit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bbedd2dfe381c99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "clc-nfc",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "clc-nfc",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "180.169.162.141/32"
                ],
                "description": "MS",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http-8080-tcp_nfc-20240130091838997300000004",
            "name_prefix": "http-8080-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-8080-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "http-8080-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8080_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-593513191",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08bbedd2dfe381c99",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_8080_nfc.aws_security_group.this",
            "module.security-group.module.security_group_8080_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8080_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "clc-nfc",
            "from_port": 8080,
            "id": "sgrule-742089947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08bbedd2dfe381c99",
            "security_group_rule_id": "sgr-07bc050c2817ba8f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_8080_nfc.aws_security_group.this",
            "module.security-group.module.security_group_8080_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8082_nfc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:security-group/sg-02600ac65305ef7d3",
            "description": "Security group for application visit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02600ac65305ef7d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "clc-nfc",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "http-8082-tcp_nfc-20240130091838997300000003",
            "name_prefix": "http-8082-tcp_nfc-",
            "owner_id": "034861587527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-8082-tcp_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "http-8082-tcp_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8082_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2762978347",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02600ac65305ef7d3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_8082_nfc.aws_security_group.this",
            "module.security-group.module.security_group_8082_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group.module.security_group_8082_nfc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "clc-nfc",
            "from_port": 8082,
            "id": "sgrule-216098434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02600ac65305ef7d3",
            "security_group_rule_id": "sgr-0ca3a52e3f87f643b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8082,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.module.security_group_8082_nfc.aws_security_group.this",
            "module.security-group.module.security_group_8082_nfc.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:vpc/vpc-02ef9167c8369aa50",
            "cidr_block": "10.65.118.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e7ca255cb743ee2c",
                "cidr_block": "10.65.118.0/23",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0ebaba46870c012f0",
                "cidr_block": "100.127.0.0/25",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-005525ddfa61ff82d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ef9167c8369aa50",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f607e3850046a58c",
            "owner_id": "034861587527",
            "tags": {
              "Name": "msct-gc-clc-nfc-test",
              "nike-application": "VPC",
              "nike-department": "Technology Operations",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "Infrastructure",
              "nike-environment": "Production",
              "nike-owner": "111111@123.com"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_ip_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3b9494ab2ff790",
            "association_id": "eipassoc-0d332d5366f517f64",
            "domain": "vpc",
            "id": "eipalloc-04f3b9494ab2ff790",
            "network_border_group": "cn-northwest-1",
            "network_interface": "eni-07c1f8b50c4f10382",
            "private_dns": "ip-10-65-119-75.cn-northwest-1.compute.internal",
            "private_ip": "10.65.119.75",
            "public_dns": "ec2-52-83-142-21.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "52.83.142.21",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:internet-gateway/igw-0e00642eea29320be",
            "id": "igw-0e00642eea29320be",
            "owner_id": "034861587527",
            "tags": {
              "Name": "internetg_gateway_nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "internetg_gateway_nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3b9494ab2ff790",
            "association_id": "eipassoc-0d332d5366f517f64",
            "connectivity_type": "public",
            "id": "nat-081d7efb4bafba93a",
            "network_interface_id": "eni-07c1f8b50c4f10382",
            "private_ip": "10.65.119.75",
            "public_ip": "52.83.142.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04294c16f4627eb98",
            "tags": {
              "Name": "GW NAT NFC",
              "nike-domain": "MSCT"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "GW NAT NFC",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_ip_nfc",
            "module.vpc.aws_subnet.public_subnet_nfc_a",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privite_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:route-table/rtb-02459ad6f0e2ce1c7",
            "id": "rtb-02459ad6f0e2ce1c7",
            "owner_id": "034861587527",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081d7efb4bafba93a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.118.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.132.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.20.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.212.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.251.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.48.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.54.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.64.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.8.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.88.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Privite-route-nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "Privite-route-nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_ip_nfc",
            "module.vpc.aws_nat_gateway.nat_gateway_nfc",
            "module.vpc.aws_subnet.public_subnet_nfc_a",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:route-table/rtb-0c9e88df9d7659bab",
            "id": "rtb-0c9e88df9d7659bab",
            "owner_id": "034861587527",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e00642eea29320be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.118.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.132.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.20.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.212.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.251.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.48.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.54.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.64.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.8.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "146.197.88.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07928b3534a4283c3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Intenet-route-nfc"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "Intenet-route-nfc",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway_nfc",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_privite_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace17f348b414987",
            "route_table_id": "rtb-02459ad6f0e2ce1c7",
            "subnet_id": "subnet-0a07021591da94479"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_ip_nfc",
            "module.vpc.aws_nat_gateway.nat_gateway_nfc",
            "module.vpc.aws_route_table.privite_nfc",
            "module.vpc.aws_subnet.privite_subnet_nfc_a",
            "module.vpc.aws_subnet.public_subnet_nfc_a",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_privite_nfc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b46d1e2e08c849d",
            "route_table_id": "rtb-02459ad6f0e2ce1c7",
            "subnet_id": "subnet-0758819fbf08d4a90"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privite_nfc",
            "module.vpc.aws_subnet.privite_subnet_nfc_b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_public_cnnw1az1_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0398f29457c27e990",
            "route_table_id": "rtb-0c9e88df9d7659bab",
            "subnet_id": "subnet-036ea15f4bddeb98d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway_nfc",
            "module.vpc.aws_route_table.public_nfc",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_public_cnnw1az2_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038d322657d65be1b",
            "route_table_id": "rtb-0c9e88df9d7659bab",
            "subnet_id": "subnet-014b9c755955dd3e7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway_nfc",
            "module.vpc.aws_route_table.public_nfc",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_public_cnnw1az3_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce88074402047754",
            "route_table_id": "rtb-0c9e88df9d7659bab",
            "subnet_id": "subnet-07b39908cb697a002"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway_nfc",
            "module.vpc.aws_route_table.public_nfc",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_public_nfc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3436f66b0aa85f8",
            "route_table_id": "rtb-0c9e88df9d7659bab",
            "subnet_id": "subnet-04294c16f4627eb98"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway_nfc",
            "module.vpc.aws_route_table.public_nfc",
            "module.vpc.aws_subnet.public_subnet_nfc_a",
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bound_public_nfc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520fd7740f63ee73",
            "route_table_id": "rtb-0c9e88df9d7659bab",
            "subnet_id": "subnet-0c8df50ec250304cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_nfc",
            "module.vpc.aws_subnet.public_subnet_nfc_b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privite_subnet_nfc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:subnet/subnet-0a07021591da94479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.65.118.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a07021591da94479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034861587527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cn-northwest-1a-privite-subnet_nfc-test"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "cn-northwest-1a-privite-subnet_nfc-test",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privite_subnet_nfc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:subnet/subnet-0758819fbf08d4a90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.65.118.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0758819fbf08d4a90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034861587527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cn-northwest-1b-privite-subnet_nfc-test"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "cn-northwest-1b-privite-subnet_nfc-test",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_nfc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:subnet/subnet-04294c16f4627eb98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.65.119.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04294c16f4627eb98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034861587527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cn-northwest-1a-public_subnet_nfc-test"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "cn-northwest-1a-public_subnet_nfc-test",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_nfc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:034861587527:subnet/subnet-0c8df50ec250304cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.65.119.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8df50ec250304cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034861587527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cn-northwest-1b-public_subnet_nfc-test"
            },
            "tags_all": {
              "Application": "CLC-NFC",
              "ContactEmail": "111111@123.com",
              "Environment": "stg",
              "Name": "cn-northwest-1b-public_subnet_nfc-test",
              "Project": "CLC-NFC",
              "Purpose": "stg",
              "nike-application": "clc-nfc",
              "nike-department": "MSCT",
              "nike-distributionlist": "Lst-gcscops@123.com",
              "nike-domain": "MSCT",
              "nike-environment": "stg",
              "nike-owner": "111111@123.com"
            },
            "vpc_id": "vpc-02ef9167c8369aa50"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.vpc_nfc"
          ]
        }
      ]
    }
  ]
}